--- a/UITraining/index.html
+++ b/UITraining/index.html
@@ -40,7 +40,7 @@
   </a>
     </div>
   </div>
-  <script type="text/javascript" src="lib/require.js" data-main="../Js/main.js">
+  <script type="text/javascript" src="lib/require.js" data-main="Js/main.js">
   </script>
 </body>
 
