--- a/UITraining/index.html
+++ b/UITraining/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="lib/require.js" data-main="Js/main.js">
+  <script type="text/javascript" src="lib/require.js" data-main="../Js/main.js">
   </script>
 
 </body>
